@@ -1,0 +1,7 @@
+@BOTTOM@
+
+/* Major version of library */
+#undef __AVRLIBC__
+
+/* Minor version of library */
+#undef __AVRLIBC_MINOR__
